Further improvements