@@ -2,32 +2,95 @@
 
 [![CI](https://github.com/parttimenerd/test-order/actions/workflows/ci.yml/badge.svg)](https://github.com/parttimenerd/test-order/actions/workflows/ci.yml)
 
-Test class priority ordering based on runtime dependency telemetry.
+Large test suites destroy developer momentum. A suite that once ran in minutes can bloat into an hour-long bottleneck, burying relevant failures somewhere in the middle of the output.
 
-Run the tests most likely affected by your latest code changes **first**, so failures surface faster.
+**test-order** is a zero-configuration Maven and Gradle plugin that uses runtime dependency telemetry to identify which tests exercise your modified code — then forces them to the **front of the execution queue**. Failures surface in seconds, not hours.
 
-Supports **JUnit 5** (Jupiter 5.x), **JUnit 6** (Jupiter 6.x), and **TestNG** (7.x+).
+- No infrastructure to deploy (unlike [Drill4J](https://drill4j.github.io/))
+- No source-code annotations required (unlike [Skippy](https://www.skippy.io/))
+- Works with **JUnit 5** (Jupiter 5.x), **JUnit 6** (Jupiter 6.x), and **TestNG** (7.x+)
 
 **Requires Java 17 or later.**
 
 ## Quick Start
 
-For most projects, zero configuration is needed:
+For most projects, zero configuration is needed — just add the plugin and run your tests.
+
+### Maven
+
+Add the plugin to your `pom.xml`:
+
+```xml
+<build>
+  <plugins>
+    <plugin>
+      <groupId>me.bechberger</groupId>
+      <artifactId>test-order-maven-plugin</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </plugin>
+  </plugins>
+</build>
+```
+
+Then run:
 
 ```bash
 # First run: learns test dependencies
-mvn test-order:combined test
+mvn test-order:auto test
 
 # Subsequent runs: automatically selective based on changes
-mvn test-order:combined test
+mvn test-order:auto test
 
 # When you need safety: run full test suite
 mvn test
 ```
 
+### Gradle
+
+Add the plugin to your `build.gradle` (Groovy DSL):
+
+```groovy
+plugins {
+    id 'me.bechberger.test-order' version '0.1.0-SNAPSHOT'
+}
+```
+
+Or `build.gradle.kts` (Kotlin DSL):
+
+```kotlin
+plugins {
+    id("me.bechberger.test-order") version "0.1.0-SNAPSHOT"
+}
+```
+
+Then run:
+
+```bash
+# Auto-detects changes, learns on first run, reorders on subsequent runs
+./gradlew test
+
+# Explicit learn mode
+./gradlew test -Dtestorder.mode=learn
+
+# Explicit order mode
+./gradlew test -Dtestorder.mode=order
+```
+
 That's it! Defaults work for ~80% of projects.
 
 **For advanced configuration and complete CLI reference**: See [docs/CLI_REFERENCE.md](docs/CLI_REFERENCE.md)
+
+### Maven vs Gradle at a glance
+
+| Feature | Maven | Gradle |
+|---|---|---|
+| Plugin application | `<plugin>` in `pom.xml` | `plugins { id 'me.bechberger.test-order' }` |
+| Auto mode | `mvn test-order:auto test` | `./gradlew test` (auto-detected) |
+| Learn mode | `mvn test -Dtestorder.mode=learn` | `./gradlew test -Dtestorder.mode=learn` |
+| Dashboard | `mvn test-order:dashboard` | `./gradlew testOrderDashboard` |
+| Export index JSON | `mvn test-order:export-json` | `./gradlew testOrderExportJson` |
+| Optimise weights | `mvn test-order:optimize` | `./gradlew testOrderOptimize` |
+| Select subset | `mvn test-order:select test` | `./gradlew testOrderSelect` |
 
 ## Fail Your Tests Fast
 
@@ -96,6 +159,18 @@ asciinema play demo.cast
 
 Both JUnit and TestNG modules share the same scoring engine (`TestScorer`, `MethodScorer`) from `test-order-core`. No configuration changes are needed — the Maven/Gradle plugins automatically detect which framework is on the test classpath and add the appropriate module.
 
+### Parallel execution
+
+Class-level test parallelism is supported when not in learn mode. The `PriorityClassOrderer` determines the priority order *before* JUnit dispatches execution, so it works correctly with:
+
+- Surefire `<parallel>classesAndMethods</parallel>` or `<parallel>all</parallel>`
+- JUnit `junit.jupiter.execution.parallel.mode.classes.default=concurrent`
+- Multiple forks (`<forkCount>2</forkCount>`)
+
+In parallel mode the computed order becomes a **scheduling priority hint** — higher-priority classes are started first, but multiple classes may execute concurrently. This still gives fast feedback on likely failures while utilising available CPU cores.
+
+> **Note:** In learn mode, class-level parallelism is **rejected** (the build will fail) because concurrent execution corrupts dependency tracking by blurring which test triggered which class load. Use sequential class execution (`<parallel>methods</parallel>` is fine) during learn runs.
+
 ## Intelligent instrumentation filtering
 
 The Java agent supports configurable filtering to focus instrumentation on code you control while avoiding JDK/framework/library internals.
@@ -119,28 +194,47 @@ Key options:
 
 Auto-detection is enabled by default and analyzes `pom.xml` / `build.gradle*` plus `src/main/*` and `src/test/*` package layout.
 
-## Benchmarking the hot path
-
-The repository includes JMH benchmarks for instrumentation hot-path operations in [test-order-benchmarks/src/main/java/me/bechberger/testorder/benchmarks/HotPathBenchmark.java](test-order-benchmarks/src/main/java/me/bechberger/testorder/benchmarks/HotPathBenchmark.java).
-
-Build and run:
-
-```bash
-mvn -B clean package -pl test-order-benchmarks -DskipTests
-java -jar test-order-benchmarks/target/benchmarks.jar -f 1 -wi 2 -i 3 -t 1
-```
-
-Measured benchmark groups:
-
-- `benchmarkClassIdMapLookup` — class ID lookup throughput
-- `benchmarkMemberIdLookup` — member ID lookup throughput
-- `benchmarkBitsetRecording` — atomic bitset write throughput
-- `benchmarkCombinedHotPath` — lookup + record end-to-end path
-- `benchmarkBitsetConversion` — conversion of bitsets to names at flush time
-
-When comparing implementation variants (for example AtomicInteger vs VarHandle counters), run the same JMH settings and JVM across variants before deciding to switch.
-
 ## Normal workflow
+
+### Common workflows
+
+1. **Bootstrap dependency index**
+
+  ```bash
+  mvn test -Dtestorder.mode=learn
+  ```
+
+2. **Default local loop (combined auto mode)**
+
+  ```bash
+  mvn test-order:auto test
+  ```
+
+  In auto mode, combined runs a full learn pass every
+  `-Dtestorder.autoLearnRunThreshold=<N>` runs (default: `10`).
+
+3. **Fast local fail-fast loop**
+
+  ```bash
+  mvn test-order:auto test \
+    -Dtestorder.changeMode=uncommitted \
+    -Dtestorder.select.topN=5 \
+    -Dtestorder.select.randomM=0
+  ```
+
+4. **Two-phase CI workflow**
+
+  ```bash
+  mvn test-order:select test
+  mvn test-order:run-remaining test
+  ```
+
+5. **Inspect prioritization without executing tests**
+
+  ```bash
+  mvn test-order:show-order
+  mvn test-order:dump
+  ```
 
 ### One-time setup
 
@@ -173,6 +267,25 @@ mvn test -Dtestorder.mode=learn
 ```
 
 Commit the updated `.test-order/test-dependencies.lz4`. The index is stored in a compact binary format (radix trie + RoaringBitmaps, LZ4-compressed) so it adds negligible overhead to your repository.
+
+### Automatic dependency change detection
+
+The plugin fingerprints the **resolved test classpath** (JAR names, sizes, and timestamps) on every run. When it detects a change — such as a SNAPSHOT rebuild, a version bump, or a new transitive dependency — it automatically switches to learn mode to rebuild the index:
+
+```
+[test-order] Dependency change detected (resolved classpath differs)
+  — switching to learn mode to refresh index.
+```
+
+This means you don't need to manually re-run learn mode after updating dependencies. The existing index is still used for ordering during the current learn run, so you get the benefit of prioritization even while relearning.
+
+Detected changes include:
+- **SNAPSHOT updates** — rebuilt SNAPSHOTs have new timestamps/sizes
+- **Version bumps** — e.g. upgrading `spring-boot` from 3.1 to 3.2
+- **Added/removed transitive dependencies** — new JARs on the classpath
+- **Lock-file changes** — Gradle lock files or version catalogs
+
+The fingerprint is stored in the state file (`.test-order-state`) and only compared against the previous run's classpath — so the first run after adding the plugin simply records the baseline without triggering a learn.
 
 ### Always-on instrumentation
 
@@ -412,7 +525,7 @@ After accumulating at least 3 runs with failures, use the `optimize` command
 to find weights that maximise APFD via hill climbing:
 
 ```bash
-java -jar test-order-junit-jar-with-dependencies.jar optimize .test-order/state.lz4
+java -jar test-order-core-jar-with-dependencies.jar optimize .test-order/state.lz4
 ```
 
 Or use the Maven plugin goal:
@@ -468,10 +581,11 @@ Change detection supports four modes:
 | `uncommitted` | Run tests for current workspace edits | staged + unstaged + untracked files |
 | `explicit` | Scripted/manual targeting | `-Dtestorder.changed.classes=...` |
 
-Default mode is `auto` (plugin-level), which resolves to:
+Default mode is `uncommitted`, which detects staged, unstaged, and untracked file changes in your working tree.
+You can override this with `-Dtestorder.changeMode=<mode>` or configure `auto` to fall back through:
 - `explicit` when `testorder.changed.classes` is provided
-- otherwise `since-last-run` if snapshots exist
-- otherwise `since-last-commit`
+- `since-last-run` if snapshots exist
+- `since-last-commit` otherwise
 
 ### Package detection
 
@@ -493,6 +607,71 @@ Redundant prefixes are automatically removed: if both `com.example` and
 
 When no source directories exist (e.g. a BOM-only project) and
 `filterByGroupId=true` (default), the Maven `groupId` is used as a fallback.
+
+## Annotations
+
+The `test-order-annotations` module provides lightweight annotations that
+influence ordering without changing scores. Add the dependency:
+
+```xml
+<dependency>
+  <groupId>me.bechberger</groupId>
+  <artifactId>test-order-annotations</artifactId>
+  <version>${testorder.version}</version>
+  <scope>test</scope>
+</dependency>
+```
+
+### `@AlwaysRun`
+
+Marks a test class or method so it is **always included** and **pinned to run
+first**, regardless of score-based ordering.
+
+```java
+import me.bechberger.testorder.AlwaysRun;
+
+@AlwaysRun
+public class SmokeTest { … }
+```
+
+Behaviour:
+
+- **Order / combined mode:** `@AlwaysRun` classes (and methods) are moved to
+  the front of the execution order, before all score-ordered tests. Among
+  multiple `@AlwaysRun` classes, alphabetical order is used.
+- **Select mode:** `@AlwaysRun` classes are unconditionally included in the
+  selected subset (they count toward the budget but are never dropped).
+- **`@AlwaysRun` on methods:** Within a single test class, annotated methods
+  are pinned first, before score-ordered methods.
+- **Precedence:** `@AlwaysRun` takes precedence over `@TestOrder(priority = LAST)`.
+  A class or method annotated with both will still be pinned first.
+
+### JUnit `@Order` compatibility
+
+If a test class uses JUnit's own ordering annotations, test-order leaves it
+alone:
+
+- **Class-level:** Classes annotated with `@Order` are placed in their own
+  group sorted by `@Order` value (ascending), inserted after `@AlwaysRun`
+  classes but before score-ordered classes.
+- **Method-level:** If any method in a class carries `@Order`, or the class
+  is annotated with `@TestMethodOrder`, test-order skips method reordering
+  entirely for that class, letting JUnit's built-in ordering take effect.
+
+```java
+import org.junit.jupiter.api.Order;
+import org.junit.jupiter.api.MethodOrderer;
+import org.junit.jupiter.api.TestMethodOrder;
+
+@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
+public class StepByStepTest {
+    @Test @Order(1) void login() { … }
+    @Test @Order(2) void browse() { … }
+    @Test @Order(3) void checkout() { … }
+}
+```
+
+test-order will not reorder the methods inside `StepByStepTest`.
 
 ## Maven Plugin
 
@@ -527,9 +706,9 @@ By default this uses `FULL` instrumentation.
 To use a different instrumentation mode:
 
 ```bash
-mvn test -Dtestorder.mode=learn -Dtestorder.instrumentationMode=METHOD_ENTRY
-mvn test -Dtestorder.mode=learn -Dtestorder.instrumentationMode=FULL_METHOD
-mvn test -Dtestorder.mode=learn -Dtestorder.instrumentationMode=FULL_MEMBER
+mvn test -Dtestorder.mode=learn -Dtestorder.instrumentation.mode=METHOD_ENTRY
+mvn test -Dtestorder.mode=learn -Dtestorder.instrumentation.mode=FULL_METHOD
+mvn test -Dtestorder.mode=learn -Dtestorder.instrumentation.mode=FULL_MEMBER
 ```
 
 Use `FULL_METHOD` for per-test-method dependency tracking, and `FULL_MEMBER` when you need precise member-aware scoring based on changed methods or fields.
@@ -563,45 +742,107 @@ Example: `-Dtestorder.mode=learn` overrides `<mode>order</mode>` in the POM for 
 If `testorder.mode` is `auto` (the default), the plugin checks for a `testorder.learn` system property.
 In order mode it falls back through: explicit classes → hash-based → git-based change detection.
 
-### Select mode (fast CI subset)
+### Select mode (two-phase CI workflow)
 
-Run only the most important tests first — all new tests, the top-N by score, and M random fast tests chosen for maximum code-coverage diversity.  Remaining tests are written to a file for a follow-up step.
+Split your test suite into two Maven invocations for fast feedback:
 
 ```bash
-# Step 1: run only the fast subset (fail-fast)
+# Phase 1 — run the critical subset (fail-fast)
 mvn test-order:select test
 
-# Step 2: if step 1 passed, run the remaining tests
+# Phase 2 — if phase 1 passed, run everything else
 mvn test-order:run-remaining test
 ```
 
-Selection parameters:
+**Phase 1 (`select`)** picks tests in four priority tiers:
+
+1. **`@AlwaysRun` tests** — classes (or methods) annotated with `@AlwaysRun` are unconditionally included and pinned first. Use this for smoke tests or critical-path tests that must never be skipped.
+2. **New tests** — test classes that do not appear in the dependency index yet (added since the last learn run).
+3. **Affected tests** — all tests whose dependency set overlaps with changed source classes, ranked by the scoring formula. By default every affected test is included (`topN=-1`). Set `topN` to a positive number to cap the selection.
+4. **Diverse fast tests** — `M` additional fast tests chosen greedily by Jaccard distance to maximise code-coverage breadth.
+
+Selected test FQCNs are written to `target/test-order-selected.txt` (one per line) and Surefire is configured to run only those classes. All other test classes are written to `target/test-order-remaining.txt`.
+
+**Phase 2 (`run-remaining`)** reads `target/test-order-remaining.txt` and configures Surefire to run exactly those deferred classes. If the file is missing or empty, tests are skipped.
+
+#### Example: automatic change detection (default)
+
+```bash
+# Phase 1: plugin auto-detects changed files via git
+mvn test-order:select test
+
+# Phase 2: run whatever was deferred
+mvn test-order:run-remaining test
+```
+
+To override change detection for scripting or debugging, use explicit mode:
+
+```bash
+mvn test-order:select test \
+    -Dtestorder.changeMode=explicit \
+    -Dtestorder.changed.classes=com.myapp.MathService
+```
+
+#### Adding `@AlwaysRun` smoke tests
+
+```java
+import me.bechberger.testorder.AlwaysRun;
+
+@AlwaysRun
+class SmokeTest {
+    @Test void healthCheck() { /* ... */ }
+}
+```
+
+`SmokeTest` will appear in phase 1 regardless of what code changed.
+
+```bash
+mvn test -Pselect                # phase 1
+mvn test -Prun-remaining         # phase 2
+```
+
+#### Selection parameters
 
 | Parameter | Property | Default | Description |
 |---|---|---|---|
-| `topN` | `testorder.select.topN` | `20` | Number of top-scored tests to always include |
+| `topN` | `testorder.select.topN` | `-1` | Number of top-scored affected tests to include (`-1` = all affected) |
 | `randomM` | `testorder.select.randomM` | `10` | Number of random fast tests for coverage diversity |
 | `seed` | `testorder.select.seed` | — | Random seed for reproducible selection |
 | `remainingFile` | `testorder.select.remainingFile` | `target/test-order-remaining.txt` | File for deferred test classes |
 | `selectedFile` | `testorder.select.selectedFile` | `target/test-order-selected.txt` | File for selected test classes |
 
-### Combined mode (local development)
+### Auto mode (combined goal)
 
 A single goal that handles the full workflow automatically:
 
 1. If no dependency index exists → runs in learn mode (agent attached, all tests)
-2. Otherwise → selects a fast subset and configures Surefire to run it
-3. Sets a property so a follow-up execution can run remaining tests  
-4. Periodically triggers weight optimisation (every N successful runs)
+2. If `runsSinceLearn >= testorder.autoLearnRunThreshold` (default `10`) → runs full learn mode
+3. Otherwise → selects a fast subset and configures Surefire to run it first
+4. If that selected subset passes, run deferred tests in a second step (`mvn test-order:run-remaining test`)
+5. Periodically triggers weight optimisation (every N successful runs)
 
 ```bash
-mvn test-order:combined test
+mvn test-order:auto test
 ```
 
 | Parameter | Property | Default | Description |
 |---|---|---|---|
-| `runRemaining` | `testorder.combined.runRemaining` | `true` | Run remaining tests after selected pass |
+| `runRemaining` | `testorder.combined.runRemaining` | `true` | Automatically run remaining tests after the selected subset (`false` = fail-fast subset only) |
 | `optimizeEvery` | `testorder.combined.optimizeEvery` | `10` | Optimise weights every N runs (0 = never) |
+| `autoLearnRunThreshold` | `testorder.autoLearnRunThreshold` | `10` | In auto mode, force a full learn pass every N runs (0 = disable periodic auto-learn) |
+
+Use auto mode via the `combined` goal when you want one command for the
+selected fail-fast phase:
+
+```bash
+mvn test-order:auto test
+```
+
+Then run the deferred tests only when the first command succeeds:
+
+```bash
+mvn test-order:auto test && mvn test-order:run-remaining test
+```
 
 ### Recommended CI setup
 
@@ -615,7 +856,9 @@ jobs:
       - run: mvn test -Dtestorder.mode=learn
       - run: git add .test-order/ && git commit -m "update test-order data" && git push
 
-  # Every PR: fast subset first, then remaining
+  # Every PR: two-phase workflow
+  #   Phase 1 runs @AlwaysRun + new + affected + diverse fast tests
+  #   Phase 2 runs the remaining tests (only if phase 1 passed)
   test-fast:
     steps:
       - run: mvn test-order:select test
@@ -632,17 +875,37 @@ jobs:
       - run: git add .test-order/state.lz4 && git commit -m "optimise test-order weights" && git push
 ```
 
+### Additional goals
+
+| Goal | Description |
+|---|---|
+| `test-order:learn` | Force learn mode (attach agent, execute full test run, rebuild dependency index) |
+| `test-order:export-json` | Export dependency index as JSON (stdout by default, or `-Dtestorder.exportJson.output=...`) |
+| `test-order:snapshot` | Save source/test file hash snapshots for `since-last-run` change detection |
+| `test-order:help` | Display all plugin goals and common configuration properties |
+
+### Skipping the plugin
+
+To disable test-order entirely for a specific invocation:
+
+```bash
+mvn test -Dtestorder.skip=true
+```
+
+Or set `<skip>true</skip>` in the plugin `<configuration>` block.
+
 ### Plugin parameters
 
 | Parameter | Property | Default | Description |
 |---|---|---|---|
-| `mode` | `testorder.mode` | `auto` | `auto`, `learn`, or `order` |
+| `skip` | `testorder.skip` | `false` | Skip the plugin entirely |
+| `mode` | `testorder.mode` | `auto` | `auto`, `learn`, `order`, or `skip` |
 | `indexFile` | `testorder.index` | `${project.basedir}/.test-order/test-dependencies.lz4` | Dependency index path |
 | `depsDir` | `testorder.depsDir` | `${project.build.directory}/test-order-deps` | Directory for `.deps` files |
 | `includePackages` | `testorder.includePackages` | — | Additional comma-separated package prefixes to instrument (merged with auto-detected source packages) |
 | `filterByGroupId` | `testorder.filterByGroupId` | `true` | Fall back to groupId when no source packages are detected |
-| `instrumentationMode` | `testorder.instrumentationMode` | `FULL` | `FULL`, `METHOD_ENTRY`, `FULL_METHOD`, or `FULL_MEMBER` |
-| `changeMode` | `testorder.changeMode` | `auto` | `auto`, `since-last-run`, `since-last-commit`, `uncommitted`, `explicit` |
+| `instrumentationMode` | `testorder.instrumentation.mode` | `FULL` | `FULL`, `METHOD_ENTRY`, `FULL_METHOD`, or `FULL_MEMBER` |
+| `changeMode` | `testorder.changeMode` | `uncommitted` | `auto`, `since-last-run`, `since-last-commit`, `uncommitted`, `explicit` |
 | `changedClasses` | `testorder.changed.classes` | — | Explicit changed class FQCNs |
 | `hashFile` | `testorder.hashFile` | `${project.basedir}/.test-order/hashes.lz4` | LZ4-compressed hash store |
 | `testHashFile` | `testorder.testHashFile` | `${project.basedir}/.test-order/test-hashes.lz4` | Hash store for test sources |
@@ -656,6 +919,48 @@ jobs:
 | `scoreDepOverlap` | `testorder.score.depOverlap` | `5` | Max score from dependency overlap (ratio-based) |
 | `scoreChangeComplexity` | `testorder.score.changeComplexity` | `2` | Complexity-weighted overlap (Deflate-based) |
 | `scoreStaticFieldBonus` | `testorder.score.staticFieldBonus` | `0` | Fixed bonus when a changed static field overlaps a test's member dependencies |
+
+## Coverage analysis
+
+The `test-order-coverage-mojo` module analyses JaCoCo coverage reports across all modules in a multi-module build, identifies least-tested classes, and generates markdown + JSON reports:
+
+```bash
+mvn test-order:coverage
+```
+
+Parameters:
+
+| Parameter | Property | Default | Description |
+|---|---|---|---|
+| `threshold` | `coverage.threshold` | `50` | Coverage threshold percentage |
+| `outputDir` | `coverage.outputDir` | `target/coverage-reports` | Report output directory |
+| `outputFormat` | `coverage.outputFormat` | `comprehensive` | `comprehensive` (markdown + JSON), `markdown`, or `json` |
+| `includeModules` | `coverage.includeModules` | — | Comma-separated module filter |
+
+Requires JaCoCo coverage reports to be present (run `mvn verify` with JaCoCo first).
+
+## CI artifact downloading
+
+On feature branches you can skip the cold-start learn phase by downloading the dependency index from your CI system (GitHub Actions, GitLab CI, or a generic HTTP endpoint). Both the Maven and Gradle plugins integrate this automatically when a `.test-order/download-config.yml` file is present.
+
+See the [test-order-ci README](test-order-ci/README.md) for configuration, usage, and a sample GitHub Actions workflow.
+
+## Structural change analysis
+
+Beyond simple file-level change detection, test-order performs **structural diff analysis** that parses Java sources at the method/field level. This means renaming a method or changing a field is detected more precisely than a line-level diff.
+
+Two parser backends are available:
+
+| Backend | Property value | Description |
+|---|---|---|
+| **Island** (default) | `island` | Fast regex-based parser, no extra dependencies |
+| **JavaParser** | `javaparser` | Full AST-based parser, requires `com.github.javaparser:javaparser-core` on classpath |
+
+Structural diff is enabled by default. To disable:
+
+```bash
+mvn test -Dtestorder.structuralDiff.enabled=false
+```
 
 ## Java Agent
 
@@ -676,10 +981,10 @@ Agent options are parsed via [femtocli](https://github.com/parttimenerd/femtocli
 
 ## CLI Tool
 
-The `test-order-junit` module includes a CLI tool:
+The `test-order-core` module includes a CLI tool:
 
 ```bash
-java -jar test-order-junit-jar-with-dependencies.jar <command>
+java -jar test-order-core-jar-with-dependencies.jar <command>
 ```
 
 ### Commands
@@ -687,7 +992,8 @@ java -jar test-order-junit-jar-with-dependencies.jar <command>
 - `aggregate <depsDir>` — merge `.deps` files into an index
 - `affected <indexFile> -c <classes>` — list tests affected by changed classes
 - `stats <indexFile>` — print index statistics
-- `dump <indexFile>` — dump a binary index in human-readable V1 text format
+- `dump <indexFile>` — dump a binary index in human-readable text format
+- `export-json <indexFile> [-o deps.json]` — export the binary index as JSON
 - `optimize [stateFile]` — optimise scoring weights via genetic algorithm and save to state file
 - `select <indexFile>` — select a fast subset of tests (new + top-n + m diverse fast tests)
 - `hash-snapshot` — scan source tree and save LZ4-compressed file hashes
@@ -702,12 +1008,18 @@ dependency graphs, run history, and coverage data:
 ```bash
 # Generate a self-contained HTML file
 mvn test-order:dashboard
-# → target/test-order-dashboard/index.html
+# → default: target/test-order-dashboard/index.html
 
-# Generate and serve with live reload in the browser
+# Serve the configured dashboard output over local HTTP
 mvn test-order:serve
 # → opens http://localhost:<port> automatically
 ```
+
+Common options:
+
+- `-Dtestorder.dashboard.output=...` to change output file path
+- `-Dtestorder.dashboard.port=8080` to set serving port
+- `-Dtestorder.dashboard.regenerate=true` to regenerate before serving
 
 The dashboard has three tabs:
 
@@ -805,7 +1117,7 @@ Prerequisites:
 The integration tests use a helper framework in `test-order-maven-plugin/src/test/java/.../it/`:
 
 - **`TestProject`** — wraps a sample project directory. Provides `maven()` for running goals, file readers (`loadIndex()`, `loadState()`, `readFile()`, `listDepsFiles()`), file mutation (`replaceInFile()`, `appendToFile()`) with automatic `restoreAll()`, and cleanup (`cleanAll()`).
-- **`MavenRunner`** — runs Maven goals (`learn()`, `order()`, `auto()`, `showOrder()`, `dump()`, `select()`, `combined()`, etc.) capturing output and exit code.
+- **`MavenRunner`** — runs Maven goals (`learn()`, `order()`, `auto()`, `showOrder()`, `dump()`, `select()`, `exportJson()`, etc.) capturing output and exit code.
 - **`MavenResult`** — result record with `exitCode`, `output`, `grepOutput()`.
 - **Custom AssertJ assertions** via `TestOrderAssertions.assertThat(...)`:
   - `MavenResultAssert` — `succeeded()`, `failed()`, `outputContains()`, `outputDoesNotContain()`, `outputMatches()`
@@ -835,58 +1147,69 @@ mvn clean install -DskipTests && mvn -Prun-its verify -pl test-order-maven-plugi
 
 Fixtures in `test-order-maven-plugin/src/it/` (`basic-learn-mode`, `order-mode`, `aggregate-deps`, and JUnit 6 variants).
 
+## Compatibility & Coexistence
+
+### Agent coexistence (JaCoCo, Mockito, etc.)
+
+test-order injects a `-javaagent` flag into Surefire's `argLine`. If your POM already defines a custom `<argLine>` (e.g. for JaCoCo or Mockito inline), use Maven's late-binding `@{argLine}` syntax to **chain** agents instead of overwriting:
+
+```xml
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <configuration>
+    <!-- @{argLine} is replaced at execution time with the agent flags -->
+    <argLine>@{argLine} -Xmx1024m</argLine>
+  </configuration>
+</plugin>
+```
+
+If the plugin detects a hardcoded `<argLine>`, it automatically falls back to injecting the agent via the `maven.surefire.debug` property, preserving both agents. However, using `@{argLine}` is still recommended for clean agent chaining.
+
+### JDK 21+ dynamic agent warnings
+
+Starting with JDK 21 ([JEP 451](https://openjdk.org/jeps/451)), the JVM prints a warning when agents are loaded dynamically:
+
+```
+WARNING: A Java agent has been loaded dynamically...
+```
+
+test-order attaches its agent via the static `-javaagent` flag (not dynamic attach), so this warning typically does **not** appear. If you see it — e.g. because another tool triggers dynamic loading — suppress it with:
+
+```bash
+mvn test -DargLine="-XX:+EnableDynamicAgentLoading"
+```
+
+### Parallel Maven builds (`-T`)
+
+test-order supports parallel module execution (`mvn ... -T 1C`). The dependency index and state files use file-level locking and atomic temp-file replacement to prevent corruption when multiple forks write concurrently.
+
 ## Troubleshooting
 
-### Tests are not being reordered
+### Quick diagnosis table
 
-Check the three prerequisites first:
+| Symptom | Probable cause | Resolution |
+|---|---|---|
+| Tests execute in default order; index exists | Framework override | Ensure no `@TestMethodOrder` annotations are forcing JUnit to bypass `PriorityClassOrderer`. Run `mvn test-order:show-order -Dtestorder.debug=true` to inspect. |
+| JaCoCo reports 0% coverage after adding test-order | `argLine` overwrite collision | The plugin auto-detects hardcoded `<argLine>` and falls back to `maven.surefire.debug`. If you still see issues, use `@{argLine}` syntax. See [Agent coexistence](#agent-coexistence-jacoco-mockito-etc). |
+| `NegativeArraySizeException` during parallel build | Stale index from interrupted write | Delete `.test-order/` and re-run `mvn test -Dtestorder.mode=learn`. |
+| Stale ordering after refactor | Index references old class names | Re-run learn mode: `mvn test -Dtestorder.mode=learn` |
+| JVM warning about dynamic agent loading | JDK 21+ JEP 451 | Pass `-DargLine="-XX:+EnableDynamicAgentLoading"` or verify the warning comes from another tool, not test-order. |
+| Empty index despite `src/main/java` existing | Non-standard package layout | Set `-Dtestorder.includePackages=com.yourcompany` explicitly and run with `-Dtestorder.debug=true`. |
 
-1. `.test-order/test-dependencies.lz4` exists and was generated from a successful learn run.
-2. The run is in `order` or `auto` mode rather than `learn`.
-3. Your test framework is using Jupiter on the JUnit Platform and is not overriding the default class orderer.
+### Detailed troubleshooting
 
-To inspect what the plugin thinks it should do, run:
+For issues not covered above:
 
-```bash
-mvn test-order:show-order -Dtestorder.debug=true
-```
-
-If no index exists yet, run a learn pass:
-
-```bash
-mvn test -Dtestorder.mode=learn
-```
-
-### Agent or classpath errors during learn mode
-
-The learn-mode Java agent adds bytecode instrumentation. If another agent or framework transformer also modifies the same classes, try these steps:
-
-- rerun with `-Dtestorder.debug=true` to surface more ordering and change-detection details
-- switch to `METHOD_ENTRY` mode first to confirm the basic path works
-- compare a plain `mvn test` run against `mvn test -Dtestorder.mode=learn`
-- keep JaCoCo or other agents enabled, but validate the final agent combination in your project rather than assuming all transformers compose identically
-
-If a project is timing-sensitive, prefer periodic learn runs in CI instead of always-on learn mode locally.
-
-### State file corruption or stale data
-
-If `.test-order/state.lz4` or hash snapshots were interrupted mid-write, delete the local state artifacts and rebuild them:
+- Run with `-Dtestorder.debug=true` to surface change-detection details and scoring decisions.
+- Switch to `METHOD_ENTRY` instrumentation mode to isolate bytecode transformation issues.
+- Compare a plain `mvn test` run against `mvn test -Dtestorder.mode=learn` to identify agent conflicts.
+- If `.test-order/state.lz4` is corrupted, delete the entire `.test-order/` directory and rebuild:
 
 ```bash
 rm -rf .test-order
 mvn test -Dtestorder.mode=learn
 ```
-
-The state and hash stores use atomic temp-file replacement, but removing the stale `.test-order/` directory is the fastest recovery path when switching branches or after an interrupted build.
-
-### Empty dependency index or missing package detection
-
-If the index is empty, verify that the agent is instrumenting your production packages:
-
-- ensure your code lives under `src/main/java` or `src/main/kotlin`
-- inspect auto-detected packages with `-Dtestorder.debug=true`
-- set `-Dtestorder.includePackages=com.yourcompany` explicitly if your layout is non-standard
-- for multi-module builds, run learn mode in the module that owns the application classes under test
 
 ## FAQ
 
@@ -902,7 +1225,7 @@ Usually yes. JaCoCo and `test-order` can coexist because both are standard Java 
 
 `test-order` prioritizes **test classes** first and optionally prioritizes **test methods** when method-level telemetry is enabled.
 
-- **Parameterized tests**: Work on JUnit Platform; run through the same lifecycle as standard tests.
+- **Parameterized tests**: Work on JUnit Platform; class-level ordering works normally. When method-level ordering is enabled, all invocations of a parameterized method are grouped together — individual parameter invocations cannot be reordered (JUnit Platform limitation).
 - **Spring test slices**: Treated as regular test classes; dependency data is aggregated normally.
 - **Kotlin/Kotest**: **Fully supported** when using the JUnit Platform runner. See [Kotlin & Kotest Support](#kotlin--kotest-support) below for details and limitations.
 
@@ -920,6 +1243,7 @@ Usually yes. JaCoCo and `test-order` can coexist because both are standard Java 
 
 **Limitations:**
 - 🔶 **Method-level ordering**: Kotest's DSL-based test definitions map to a single test spec class; method-level ordering may not align with test case structure.
+- 🔶 **Inline functions**: Kotlin `inline fun` calls are erased by the compiler (bytecode is copied into the call site). In `FULL_MEMBER` mode, the agent cannot track the inlined call, so dependency precision is reduced. Use `FULL` mode (the default) for Kotlin projects — it tracks at class level and is not affected by inlining.
 - 🔶 **Tested with**: Kotest 5.9.1 + JUnit Platform runner. Other Kotest configurations may behave differently.
 - 🔶 **Not supported**: Kotest tests run directly (without JUnit Platform runner) will not be reordered.
 
@@ -941,7 +1265,7 @@ Usually yes. JaCoCo and `test-order` can coexist because both are standard Java 
 
 Verify Kotest integration with:
 ```bash
-mvn clean test-order:combined test
+mvn clean test-order:auto test
 ```
 
 See [test-order-example-kotlin](test-order-example-kotlin) and [fixture-kotest](test-order-junit/test-fixtures/fixture-kotest) for working examples.
@@ -998,21 +1322,91 @@ For projects where you don't want to modify build files, an init script is provi
 
 See [test-order-gradle-plugin/test-order-init.gradle](test-order-gradle-plugin/test-order-init.gradle).
 
+### Available Gradle tasks
+
+| Task | Description |
+|---|---|
+| `testOrderAggregate` | Aggregate `.deps` files into dependency index |
+| `testOrderDump` | Dump dependency index contents |
+| `testOrderShowOrder` | Show current priority order |
+| `testOrderOptimize` | Optimise scoring weights |
+| `testOrderSelect` | Select fast CI subset |
+| `testOrderRunRemaining` | Run deferred tests |
+| `testOrderClean` | Clean all test-order state, indexes, and hashes |
+| `testOrderDashboard` | Generate interactive HTML dashboard |
+| `testOrderServe` | Serve dashboard via local HTTP server |
+
+## Advanced configuration
+
+Beyond the standard plugin parameters, these system properties control advanced behaviour:
+
+### Auto-learn
+
+| Property | Default | Description |
+|---|---|---|
+| `testorder.autoLearnRunThreshold` | `0` (disabled) | Automatically re-learn after N order-mode runs |
+| `testorder.autoLearnDiffThreshold` | `0` (disabled) | Automatically re-learn when changed file count ≥ threshold |
+
+### Additional scoring properties
+
+| Property | Default | Description |
+|---|---|---|
+| `testorder.score.coverageBonus` | `0` (disabled) | Set-cover algorithm bonus for coverage diversity |
+| `testorder.score.springContextGrouping` | — | Bonus for Spring-annotated tests sharing context |
+| `testorder.score.ema.varianceThreshold` | — | EMA variance threshold for duration stability |
+
+### Method-level scoring overrides
+
+When method-level ordering is enabled (`testorder.methodOrder=true`), individual method scoring components can be tuned:
+
+| Property | Description |
+|---|---|
+| `testorder.method.score.failureRecency` | Method failure recency weight |
+| `testorder.method.score.newMethod` | New method bonus |
+| `testorder.method.score.changedMethod` | Changed method bonus |
+| `testorder.method.score.fast` | Fast method bonus |
+| `testorder.method.score.slow` | Slow method penalty |
+| `testorder.method.score.depOverlap` | Per-method dependency overlap |
+| `testorder.method.score.coverageBonus` | Per-method coverage bonus |
+
+### Runtime properties
+
+| Property | Description |
+|---|---|
+| `testorder.debug` | Enable verbose debug output for ordering and change detection |
+| `testorder.project.root` | Git project root for change detection |
+| `testorder.source.root` | Custom source root (overrides auto-detected `src/main/java`) |
+| `testorder.history.maxRuns` | Maximum run history entries (default: 50) |
+| `testorder.structuralDiff.enabled` | Enable/disable structural change analysis (default: true) |
+| `testorder.changed.classes.file` | Read changed classes from a file |
+| `testorder.changed.methods` | Explicit changed methods list |
+
+## Further documentation
+
+The [docs/](docs/) directory contains in-depth guides:
+
+| Document | Description |
+|---|---|
+| [CLI_REFERENCE.md](docs/CLI_REFERENCE.md) | Complete CLI reference, properties, change-detection modes, dashboard and CI patterns |
+| [ARCHITECTURE.md](docs/ARCHITECTURE.md) | System architecture, data flow, and extension/contribution guidance |
+| [PERFORMANCE_TUNING.md](docs/PERFORMANCE_TUNING.md) | Measurement-first performance tuning guide |
+
 ## Project structure
 
 ```
 test-order-agent/             Java agent (bytecode instrumentation via javassist)
-test-order-junit/             JUnit extension, CLI tool, change detection
+test-order-core/              Core engine: dependency index, scoring, change detection, CLI tool
+test-order-junit/             JUnit extension and listeners/orderers
 test-order-maven-plugin/      Maven plugin (prepare, aggregate, snapshot goals)
 test-order-gradle-plugin/     Gradle plugin (learn, order, utility tasks)
-test-order-cli/               CI artifact downloader (GitHub Actions, HTTP support)
+test-order-ci/                CI artifact downloader (GitHub Actions, GitLab CI, HTTP support)
 test-order-coverage-mojo/     Coverage analysis and least-tested class detection
 test-order-example/           Minimal Maven example project
-test-order-example-gradle/    Minimal Gradle example project
-test-order-example-junit5/    Maven compatibility fixture for JUnit 5
-test-order-example-kotlin/    Kotlin Maven example
-test-order-example-service/   Larger service-style Maven example
-test-order-fields-methods-example/ Field/method scoring example
+test-order-example/test-order-example-gradle/  Minimal Gradle example project
+test-order-example/test-order-example-junit5/  Maven compatibility fixture for JUnit 5
+test-order-example/test-order-example-kotlin/  Kotlin Maven example
+test-order-example/test-order-example-service/ Larger service-style Maven example
+test-order-example/test-order-fields-methods-example/ Field/method scoring example
 ```
 
 ## Dependencies
@@ -1028,24 +1422,67 @@ test-order-fields-methods-example/ Field/method scoring example
 - Java 17 or higher
 - Maven 3.9+ (for Maven plugin) or Gradle 7.6+ (for Gradle plugin)
 
+## Contributing
+
+### Quality profiles
+
+The build includes two code quality profiles for static analysis:
+
+```bash
+# Checkstyle, SpotBugs, Spotless
+mvn clean verify -Pquality
+
+# Google Error Prone static analysis
+mvn clean verify -Pquality-errorprone
+
+# Both together
+mvn clean verify -Pquality -Pquality-errorprone
+```
+
+### Dashboard UI tests
+
+The `test-order-dashboard-ui-tests` module contains Playwright-based E2E tests for the HTML dashboard.
+These tests are **skipped by default** and must be explicitly enabled:
+
+```bash
+# Install browser (one-time)
+mvn exec:java -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install chromium" -pl test-order-dashboard-ui-tests
+
+# Run UI tests (requires -Dtestorder.ui=true)
+mvn verify -pl test-order-dashboard-ui-tests -Dtestorder.ui=true
+```
+
+## How test-order compares to other tools
+
+The Java ecosystem offers several approaches to reducing test execution time. test-order focuses on **zero-infrastructure, deterministic prioritization** — here is how it compares:
+
+### Dynamic Test Impact Analysis (TIA)
+
+| Tool | Category | Approach | Key trade-off vs test-order |
+|---|---|---|---|
+| [Skippy](https://www.skippy.io/) | Coverage TIA | JaCoCo per-test coverage | Requires `@PredictWithSkippy` on every test class |
+| [OpenClover](https://openclover.org/) | Coverage TIA | Compile-time source instrumentation | Modifies sources during build; risks artifact pollution |
+| [Ekstazi](http://ekstazi.org/) | Dynamic RTS | File-level dependency tracking | File-level only; needs JVM flags on Java 11+ |
+| [STARTS](https://github.com/TestingResearchIllinois/starts) | Static RTS | Dependency graph via `jdeps` | Over-selects; blind to Reflection / Spring DI |
+| [Develocity](https://gradle.com/develocity/) | ML / PTS | Cloud ML on Build Scan history | Probabilistic (can skip relevant tests); expensive SaaS |
+| [Launchable](https://www.launchable.com/) | ML / PTS | Cloud ML on test history + Git metadata | Same probabilistic risk; data sent to third-party cloud |
+| [Drill4J](https://drill4j.github.io/) | Enterprise TIA | Distributed admin server + agents | Requires deploying standalone servers and databases |
+| [SeaLights](https://www.sealights.io/) | Enterprise TIA | Commercial SaaS quality governance | Closed-source; high cost; data leaves your infrastructure |
+
+**Why test-order?** It combines dynamic runtime accuracy (like Ekstazi/Skippy) with intelligent prioritization and local adaptive tuning (like Develocity) — no annotations, no cloud, no infrastructure. Data stays in your Git repo.
+
 ## License
 
 [MIT](LICENSE)
 
 
+
+- find usuabiltiy issues, unexpected/surprising behaviour and more by using the plugin, like a normal user would, you have a lot of example projects in this main, record the found bugs with reproducer steps (integration test or manual steps) and fix them, then re-run the tests to verify the fix and prevent regressions
+
+
 TODO:
+- find usability issues, unexpected/surprising behaviour and more by using the plugin
 
 
 
-- look at all options and improve usability
-- add tests with more example projects (e.g. multi-module, JUnit 6, larger codebases, apache collections, my own ones like condensed-data)
-- add more documentation (e.g. design decisions, index format, change detection strategies)
-- tighten quality profiles (`-Pquality` / `-Pquality-errorprone`) from advisory mode to strict CI enforcement once baseline findings are triaged
 
-
-
-- find usuabiltiy issues, unexpected/surprising behaviour and more by using the plugin, like a normal user would, you have a lot of example projects in this main, record the found bugs with reproducer steps (integration test)
-
-TODO: explain acronoyms
-
-TODO: can you have an advice pojo that suggests which test classes to split up (because the dependency overlap between methods is low)
